corrected input tooltip visibility issue

--- a/public/style.css
+++ b/public/style.css
@@ -355,7 +355,7 @@ hr {
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
+.tooltip:hover .tooltiptext, .tooltip:hover .inputtooltip {
     visibility: visible;
 }
 
